[gd_scene load_steps=14 format=3 uid="uid://f7f7kt53sufm"]

[ext_resource type="Script" uid="uid://djyo6idt6o7v1" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="AudioStream" uid="uid://bk36y45tn0ket" path="res://Audio/propellerLoop.mp3" id="2_2hs0m"]
[ext_resource type="PackedScene" uid="uid://d1ik1xt4hbw73" path="res://lunar_lander_copter.tscn" id="2_hqtel"]
[ext_resource type="PackedScene" uid="uid://bik3buytckcoh" path="res://assets/Character.glb" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://tc2puytnha6c" path="res://assets/explosionParticleSystem.tscn" id="2_sweqy"]
[ext_resource type="Script" uid="uid://c2x3dvwk33upu" path="res://camera_rig.gd" id="4_hqtel"]
[ext_resource type="AudioStream" uid="uid://f4sxbwsyirde" path="res://Audio/mixkit-cheering-crowd-loud-whistle-610.mp3" id="7_1jxqw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hqtel"]
custom_solver_bias = 1.0
size = Vector3(12.3, 0.47, 1.883)

[sub_resource type="BoxShape3D" id="BoxShape3D_sweqy"]
size = Vector3(1.98, 1.22, 2.736)

[sub_resource type="BoxShape3D" id="BoxShape3D_i3pqv"]
custom_solver_bias = 1.0
size = Vector3(2.406, 0.486, 0.636)

[sub_resource type="BoxShape3D" id="BoxShape3D_2hs0m"]
size = Vector3(0.26, 3.69, 0.258)

[sub_resource type="BoxShape3D" id="BoxShape3D_1jxqw"]
size = Vector3(0.5, 0.5, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dw050"]
height = 0.135
radius = 3.285

[node name="Player" type="CharacterBody3D" groups=["Helicopter"]]
script = ExtResource("1_i3pqv")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56775, 0)
stream = ExtResource("2_2hs0m")
volume_db = 15.0
max_db = 6.0

[node name="ExplosionParticleSystem" parent="." instance=ExtResource("2_sweqy")]
transform = Transform3D(2.78033, 0, 0, 0, 2.78033, 0, 0, 0, 2.78033, 0, 1.56775, 0)

[node name="LunarLanderCopter" parent="." instance=ExtResource("2_hqtel")]

[node name="Character" parent="." instance=ExtResource("2_i3pqv")]
transform = Transform3D(-0.630023, -0.0240032, -0.0640997, -0.0244818, 0.633248, 0.00349699, 0.0639184, 0.00595279, -0.630471, 0.0796674, 0.872335, -0.651443)

[node name="CollisionShapeWings" type="CollisionShape3D" parent="." groups=["Helicopter"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.907211, -0.799817)
shape = SubResource("BoxShape3D_hqtel")

[node name="CollisionShapeCockpit" type="CollisionShape3D" parent="." groups=["Helicopter"]]
transform = Transform3D(1, 0, 0, 0, 0.999905, 0.0137702, 0, -0.0137702, 0.999905, 0, 0.926232, 0.0716173)
shape = SubResource("BoxShape3D_sweqy")

[node name="BackWheels" type="Area3D" parent="." groups=["Helicopter"]]
transform = Transform3D(1, 0, 0, 0, 0.999905, 0.0137702, 0, -0.0137702, 0.999905, 0.0429158, 0.306685, 2.3839)

[node name="CollisionShapeBackWheels" type="CollisionShape3D" parent="BackWheels" groups=["Helicopter"]]
shape = SubResource("BoxShape3D_i3pqv")

[node name="CollisionShapeMast" type="CollisionShape3D" parent="." groups=["Helicopter"]]
transform = Transform3D(1, 0, 0, 0, 0.999905, 0.0137702, 0, -0.0137702, 0.999905, 0.0614252, 2.42366, -0.119768)
shape = SubResource("BoxShape3D_2hs0m")

[node name="FrontWheel" type="Area3D" parent="." groups=["Helicopter"]]
transform = Transform3D(1, 0, 0, 0, 0.999905, 0.0137702, 0, -0.0137702, 0.999905, 0.0429158, 0.306685, 2.3839)

[node name="CollisionShapeFrontWheel" type="CollisionShape3D" parent="FrontWheel" groups=["Helicopter"]]
transform = Transform3D(1, 0, 0, 0, 0.99769, 0.0679282, 0, -0.0679282, 0.99769, 0.0357953, -0.0402474, -6.66379)
shape = SubResource("BoxShape3D_1jxqw")

[node name="CollisionShapePropeller" type="CollisionShape3D" parent="." groups=["Helicopter"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.216208, 4.36042, 0.00168502)
shape = SubResource("CylinderShape3D_dw050")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.84146, 0)

[node name="CameraMount" type="Node3D" parent="Node3D"]
script = ExtResource("4_hqtel")

[node name="Camera3D" type="Camera3D" parent="Node3D/CameraMount"]
transform = Transform3D(1, 0, 0, 0, 0.77554, 0.631299, 0, -0.631299, 0.77554, 0, 5.39457, 7.29156)

[node name="Winsound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.960745, 12.9634, 38.9632)
stream = ExtResource("7_1jxqw")
volume_db = 15.0
max_db = 6.0
